--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="style.css">
   <title>Secret Tel Aviv</title>
 </head>
@@ -9,7 +10,7 @@
 
   <nav>
     <ul>
-      <li><a href="#food">Food</a></li>
+      <li><a href="#food"><a href="#food">Food</a></a></li>
       <li><a href="#night-life">Night Life</a></li>
       <li><a href="#jobs">Jobs</a></li>
       <li><a href="#apartments">Apartments</a></li>
@@ -24,7 +25,7 @@
 
 
 <section class="food">
-  <h1>THE BEST RESTAURANTS</h1>
+  <a name="food"><h1>THE BEST RESTAURANTS</h1></a>
 
   <div class="row">
     <div class="column">
@@ -70,6 +71,28 @@
         <img src="http://cdn.ibookisrael.com/Admin/Upload/Tours/2473/humous-food-goisrael.com_570.jpg">
       </div>
     </div>  
+  </div>
+</section>
+
+
+<section class="night-life">
+  <h1>NIGHT LIFE IN TEL AVIV</h1>
+  <div class="row">
+
+    <div class="column-70">
+      <div class="bar"><h1>The Best Bars in Tel Aviv</h1>
+        <div class="image"></div>
+      </div>
+    </div>
+
+    <div class="column-30">
+      <div class="sidebar"><h1>Random Stuff</h1>
+        <div class="randome">
+          <p>
+Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 
